dq_test/bug.txt
root@tjzj-inf-sci-k8s-bzz2-0000:/home/users/chenquanlin/workspace/operator/test_operator/dq_test# python test_dq_phase.py 
CUDA Device: CF-NG-BZZ2-O
CUDA Capability: (10, 0)
Fixed TOPK=64, B_H=128, D_QK=576, D_V=512
[DBG][B0 SQ0 CTA0 W6 MMA] role_enter
[DBG][B1 SQ0 CTA1 W7 KVALID] role_enter
[DBG][B0 SQ0 CTA0 W7 KVALID] role_enter
[DBG][B1 SQ0 CTA1 W6 MMA] role_enter
[DBG][B0 SQ0 CTA0 W4 KV_COPY] role_enter
[DBG][B1 SQ0 CTA1 W4 KV_COPY] role_enter
[DBG][B0 SQ0 CTA0] enter topk=64 num_k=1 max_kv=63
[DBG][B1 SQ0 CTA1] enter topk=64 num_k=1 max_kv=63
[DBG][B0 SQ0 CTA0 W0 SOFTMAX] role_enter
[DBG][B1 SQ0 CTA1 W0 SOFTMAX] role_enter
[DBG][B1 SQ0 CTA1] post_init cluster_sync_done
[DBG][B0 SQ0 CTA0] post_init cluster_sync_done
Traceback (most recent call last):
  File "/home/users/chenquanlin/workspace/operator/test_operator/dq_test/test_dq_phase.py", line 109, in <module>
    main()
  File "/home/users/chenquanlin/workspace/operator/test_operator/dq_test/test_dq_phase.py", line 100, in main
    ok_full = run_case("full_topk_window", s_q=32, s_kv=256, q_start_index_s=63)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/users/chenquanlin/workspace/operator/test_operator/dq_test/test_dq_phase.py", line 74, in run_case
    torch.cuda.synchronize()
  File "/usr/local/lib/python3.12/dist-packages/torch/cuda/__init__.py", line 1040, in synchronize
    return torch._C._cuda_synchronize()
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
RuntimeError: CUDA error: an illegal instruction was encountered
CUDA kernel errors might be asynchronously reported at some other API call, so the stacktrace below might be incorrect.
For debugging consider passing CUDA_LAUNCH_BLOCKING=1
Compile with `TORCH_USE_CUDA_DSA` to enable device-side assertions.
